near and within geo queries working with metadata standard filtering
